--- a/src/components/TeamMember/TeamMember.scss
+++ b/src/components/TeamMember/TeamMember.scss
@@ -55,6 +55,11 @@
                 width: 100%;
                 height: auto;
                 margin-left: 0;
+
+                &:hover {
+                    height: auto;
+                    margin-left: 0;
+                }
             }
         }
     }
