--- a/src/pages/App.scss
+++ b/src/pages/App.scss
@@ -21,6 +21,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
+            margin: 0 auto;
         }
 
         .hero-header {
@@ -63,6 +64,7 @@
         max-width: 1170px;
         width: 100%;
         padding: 40px 0 40px 48px;
+        margin: 0 auto;
         .section-header {
             display: flex;
             align-items: center;
